 * Merged Data CD and Data DVD projects into one plain data project with Blu-Ray support
 * Merged eMovix CD and eMovix DVD projects
 * Removed CD copy option "prefere CD-Text". K3b will now ask individually.
   (there is no need to do this if no mounting is involved.)
 * Allow importing of arbitrary sessions into a data project, thus continuing other than the
   last session.

1.0.1
=====
 * Fixed crash when using the Device menu without a selected device.
 * Fixed DVD copy when reading from a DVD+RW.
 * Fixed --without-alsa configure check
 * Fixed a crash in Video DVD ripping when the title does not contain an audio stream
 * Only use the mkisofs parameters -biblio, -copyright, and -abstract if they have been set. Using them
   with invalid values (empty) seems to result in broken iso images sometimes.

1.0
===
 * K3b now includes a VideoDVD kio slave. It can be used in Konqueror through the protocol videodvd:/
   to copy the files from a VideoDVD with on-the-fly decryption if libdvdcss is installed.
   (Be aware that in some countries it is not permitted to use libdvdcss.)
 * New Device menu containing all the actions possible for a device (like eject, unmount, ...).
   This includes the possibility of assigning shortcuts to these kind of actions.
 * K3b now warns if user parameters for external programs have been specified. This has been introduced
   because there were some bug report that were caused by faulty user parameters.
 * Cleaned up all the job classes: No job creates a widget anymore. This allows for non-GUI usage of libk3b.
   For example in a kioslave.
 * New option in the data project to not cache the inodes. That means it is possible to have multiple
   actual copies of the same file on one CD/DVD.
 * K3b now tries to disable stuff that might influence the burning process. This includes the KDED module
   mediamanager, SuSEPlugger, and automounting (currently supported: subfs, supermount).