@@ -2,6 +2,7 @@
 *
 * $Id$
 * Copyright (C) 2003-2004 Christian Kvasny <chris@k3b.org>
+* Copyright (C) 2007 Sebastian Trueg <trueg@k3b.org>
 *
 * This file is part of the K3b project.
 * Copyright (C) 1998-2007 Sebastian Trueg <trueg@k3b.org>
@@ -62,6 +63,8 @@ class LIBK3B_EXPORT K3bVcdDoc : public K3bDoc
         enum vcdTypes { VCD11, VCD20, SVCD10, HQVCD, NONE};
 
         bool newDocument();
+	void clear();
+
         int numOfTracks() const
         {
             return m_tracks->count();
